--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 		<a href="http://sor.snu.ac.kr">Security Optimization Lab (SOR)</a><br>
 		<br>
 		Email: jsyou@sor.snu.ac.kr<br>
-		CV
+		<a href="https://junseungyou.github.io/assets/jsyou.pdf">CV</a>
 		</p>
 	  </div>
 	</div>
